# AudioBatchOrganize

./: .gitignore  README.md  main  setup.cfg
audio_organize/: __init__.py  __main__.py  audio_organizer.py  clean_temps.py  dump_metadata.py  metadata.py  parse_metadata.py  remap_metadata.py  sort_by_metadata.py  sort_disc_track.py  split_by_cue.py
audio_organizer/: __init__.py  clean_temps.py  draw_spectrogram.py  dump_metadata.py  metadata.py  parse_metadata.py  remap_metadata.py  rename_conflict.py  sort_by_metadata.py  sort_disc_track.py  split_by_cue.py  strip_cv.py  subprog.py  util.py
