[metadata]
name = audio_organize
description = Batch editing audio file metadata and organize files based on metadata
long_description = file: README.md
version = attr: audio_organize.__version__
author = Guangyu Li
author_email = gl343@cornell.edu
license = GNU General Public License v3
classifiers =
	License :: OSI Approved :: GNU General Public License v3
	Programming Language :: Python
	Programming Language :: Python :: 3

[options]
packages = find:

[options.entry_points]
console_scripts =
	audio-organize = audio_organize:main
